Frontend upgrades. Core Routes.

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -198,7 +198,7 @@
                 </li>
                 <!-- LEADS WHATSAPP LINK -->
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('leadgen.view_leads_whatsapp') }}">Leads</a>
+                    <a class="nav-link" href="{{ url_for('core.view_leads_whatsapp') }}">Leads</a>
                 </li>
                 <!-- "LOGOUT" Link -->
                 <li class="nav-item">
