--- a/frontend/templates/core/base_core_light.html
+++ b/frontend/templates/core/base_core_light.html
@@ -254,8 +254,8 @@
 
 <!-- Footer -->
 <footer class="footer-custom">
-    <p>&copy; 2024 CRM WhatsApp. Todos os direitos reservados.</p>
-    <p><a href="mailto:contato@whatsappcrm.com.br">contato@whatsappcrm.com.br</a></p>
+    <p>&copy; 2024 Konquista. Todos os direitos reservados.</p>
+    <p><a href="mailto:contato@konquista.com.br">contato@konquista.com.br</a></p>
     <p class="social-icons">
         <a href="https://facebook.com/seuPerfil" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://instagram.com/seuPerfil" target="_blank"><i class="fab fa-instagram"></i></a>
