--- a/frontend/templates/core/core.html
+++ b/frontend/templates/core/core.html
@@ -11,7 +11,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Contatos</h4>
                         <p class="card-text">Gerencie e visualize todos os contatos cadastrados.</p>
-                        <a href="{{ url_for('leadgen.view_leads_whatsapp') }}" class="btn btn-primary">Acessar</a>
+                        <a href="{{ url_for('core.view_leads_whatsapp') }}" class="btn btn-primary">Acessar</a>
                     </div>
                 </div>
             </div>
