--- a/frontend/templates/core/view_leads.html
+++ b/frontend/templates/core/view_leads.html
@@ -6,7 +6,7 @@
     <!-- Total Leads and Pages Information -->
     <p class="text-center">Total leads: {{ pagination.total }} </p>
 <!-- Filter Form -->
-<form action="{{ url_for('leadgen.view_leads_whatsapp') }}" method="GET" class="mb-4">
+<form action="{{ url_for('core.view_leads_whatsapp') }}" method="GET" class="mb-4">
     <div class="form-row">
         <div class="col">
             <input type="text" name="name" class="form-control" placeholder="Nome" value="{{ request.args.get('name', '') }}">
@@ -43,9 +43,9 @@
         <a href="{{ url_for('leadgen.upload') }}" class="btn btn-primary btn-lg">Subir Leads via CSV</a>
     </div>
 
-    <table class="table">
-        <thead>
-            <tr>
+    <div class="table-responsive">
+        <table class="table table-hover table-bordered">
+            <thead class="thead-dark">
                 <th>ID</th>
                 <th>Nome</th>
                 <th>Telefone</th>
@@ -59,7 +59,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for lead in leads %}
+        {% for lead in leads %}
             <tr>
                 <td>{{ lead.id }}</td>
                 <td>{{ lead.name }}</td>
@@ -71,13 +71,14 @@
                 <td>{{ lead.region }}</td>
                 <td>{{ lead.tags }}</td>
                 <td>
-                    <a href="{{ url_for('leadgen.edit_leads', lead_id=lead.id) }}" class="btn btn-warning btn-sm">Editar</a>
-                    <form action="{{ url_for('leadgen.delete_leads', lead_id=lead.id) }}" method="POST" style="display:inline;">
+                    <!-- Use lead.model_type directly -->
+                    <a href="{{ url_for('core.edit_leads', model_type=lead.model_type, lead_id=lead.id) }}" class="btn btn-warning btn-sm">Editar</a>
+                    <form action="{{ url_for('core.delete_leads', model_type=lead.model_type, lead_id=lead.id) }}" method="POST" style="display:inline;">
                         <button type="submit" class="btn btn-danger btn-sm">Excluir</button>
                     </form>
                 </td>
             </tr>
-            {% endfor %}
+        {% endfor %}
         </tbody>
     </table>
 
@@ -87,7 +88,7 @@
             <!-- Previous Button -->
             {% if pagination.has_prev %}
             <li class="page-item">
-                <a class="page-link" href="{{ url_for('leadgen.view_leads_whatsapp', page=pagination.prev_num) }}">Previous</a>
+                <a class="page-link" href="{{ url_for('core.view_leads_whatsapp', page=pagination.prev_num) }}">Previous</a>
             </li>
             {% else %}
             <li class="page-item disabled">
@@ -103,7 +104,7 @@
             <!-- Next Button -->
             {% if pagination.has_next %}
             <li class="page-item">
-                <a class="page-link" href="{{ url_for('leadgen.view_leads_whatsapp', page=pagination.next_num) }}">Next</a>
+                <a class="page-link" href="{{ url_for('core.view_leads_whatsapp', page=pagination.next_num) }}">Next</a>
             </li>
             {% else %}
             <li class="page-item disabled">
@@ -113,7 +114,7 @@
         </ul>
 
         <!-- Specific Page Navigation -->
-        <form action="{{ url_for('leadgen.view_leads_whatsapp') }}" method="GET" class="form-inline justify-content-center">
+        <form action="{{ url_for('core.view_leads_whatsapp') }}" method="GET" class="form-inline justify-content-center">
             <label for="pageInput" class="mr-2">Go to page:</label>
             <input type="number" name="page" id="pageInput" class="form-control" min="1" max="{{ pagination.pages }}" value="{{ pagination.page }}">
             <button type="submit" class="btn btn-primary ml-2">Go</button>
