--- a/frontend/templates/core/message_list.html
+++ b/frontend/templates/core/message_list.html
@@ -13,11 +13,10 @@
         </div>
 
         <!-- Table for Listing Messages -->
-        <div class="row">
-            <div class="col-md-12">
-                <table class="table table-bordered table-striped">
-                    <thead>
-                        <tr>
+        <div class="table-responsive">
+            <table class="table table-hover table-bordered">
+                <thead class="thead-dark">
+                    <tr>
                             <th>Título</th>
                             <th>Texto</th>
                             <th>Intervalo</th>
